--- a/index.html
+++ b/index.html
@@ -62,6 +62,13 @@
                         <a href="#section-2" class="nav-link text-stone-600 hover:text-emerald-700 px-3 py-2 rounded-md text-sm font-medium">制度の歴史</a>
                         <a href="#section-3" class="nav-link text-stone-600 hover:text-emerald-700 px-3 py-2 rounded-md text-sm font-medium">主要制度の比較</a>
                         <a href="#section-4" class="nav-link text-stone-600 hover:text-emerald-700 px-3 py-2 rounded-md text-sm font-medium">医療法人とDC</a>
+                        <a href="#section-4" class="nav-link text-stone-600 hover:text-emerald-700 px-3 py-2 rounded-md text-sm font-medium">医療法人とDC</a>
+                        
+                        <!-- 新規追加：看護・介護職の退職金実態資料へのリンク -->
+                        <a href="data/iryou_kaigo_taishokukin_jittai.md" target="_blank" class="nav-link text-stone-600 hover:text-red-600 px-3 py-2 rounded-md text-sm font-medium border border-red-400 bg-red-50 hover:bg-red-100">職種別相場 (PDF)</a>
+                        
+                        <!-- 新規追加：ヒアリング結果資料へのリンク（準備中） -->
+                        <a href="data/hearing_results.md" target="_blank" class="nav-link text-stone-600 hover:text-yellow-600 px-3 py-2 rounded-md text-sm font-medium border border-yellow-400 bg-yellow-50 hover:bg-yellow-100">ヒアリング結果 (準備中)</a>
                     </div>
                 </div>
                 <div class="md:hidden">
